--- a/gdp/templates/partials/navbar.html
+++ b/gdp/templates/partials/navbar.html
@@ -4,10 +4,13 @@
     <div id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">Home</a>
+                <a class="nav-link" href="{% url 'index' %}">Year</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'linechart' %}">Country</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'csv' %}">Top GDP</a>
             </li>
         </ul>
     </div>
